plugins {
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'java'
    id "org.sonarqube" version "3.4.0.2513"
}

apply plugin: 'java'
apply plugin: 'base'

//apply plugin: 'org.sonarqube'

group = 'enovikow'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
}

sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
    }
}

sonarqube {
    properties {
        property 'sonar.host.url', 'http://localhost:9000'
        property "sonar.login", "admin"
        property "sonar.password", "Dctjnkbxyj626"
        property 'sonar.java.source', 18
        property 'sonar.junit.reportPaths', 'build/results'
        property 'encoding', 'UTF-8'
        property 'charSet', 'UTF-8'
        property "sonar.coverage.jacoco.xmlReportPaths", "path.xml"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
